--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <script type="text/javascript" src="javascripts/script.js"></script>
 
   <title>Kaykanloo.github.io</title>
-  <meta name="description" content="Personal Web Pages">
+  <meta name="description" content="Personal Web Page">
 
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
@@ -25,7 +25,7 @@
       <h1 class="title">Kaykanloo.github.io</h1>
     </header>
     <div id="container">
-      <p class="tagline">Personal Web Pages</p>
+      <p class="tagline">Personal Web Page</p>
       <div id="main" role="main">
         <div class="download-bar">
         <div class="inner">
