--- a/index.html
+++ b/index.html
@@ -30,10 +30,8 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
           </button>
-          <p class="navbar-brand currentpage">About Me</p>
+          <a class="navbar-brand currentpage">About Me</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
