--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
     <div class="container">
       <!-- Main component for a primary marketing message or call to action -->
       <div class="jumbotron">
-        <h1>Navbar example</h1>
-        <p>This example is a quick exercise to illustrate how the default, static and fixed to top navbar work. It includes the responsive CSS and HTML, so it also adapts to your viewport and device.</p>
+        <h1>Welcome!</h1>
+        <p>This site is still under construction, you can contact me at contact@kaykanloo.com.</p>
       </div>
     </div> <!-- /container -->
 
