--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 	<link href="css/styles.css?v=1.2" rel="stylesheet">	
   </head>
 
-  <body>
-  <header>
-  <!-- Fixed navbar -->
+  <body class="Frame">
+    <header class="Row">
+	<!-- Fixed navbar -->
     <div class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
@@ -46,6 +46,7 @@
     </div>
    </header>
    
+   <section class="Row Expand">
     <div class="container">
       <!-- Main component for a primary marketing message or call to action -->
       <div class="jumbotron">
@@ -53,12 +54,13 @@
         <p>This site is still under construction, you can contact me at contact@kaykanloo.com.</p>
       </div>
     </div> <!-- /container -->
-
-	<footer>
+	</section>
+	
+	<footer class="Row">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-3 footer-leftcol">
-					<p><br>Powered By <a href="https://pages.github.com/">GitHub Pages</a><br>
+					<p><br>Hosted on <a href="https://pages.github.com/">GitHub Pages</a><br>
 					&#169; 2014 <a href="http://www.kaykanloo.com">Kaykanloo</a>
 					</p>
 				</div>
@@ -77,10 +79,7 @@
 			</div>
 		</div>
 	</footer>
-  <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="js/jquery.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
   </body>
 </html>
