Fixed height footer Using a fixed height footer.

--- a/index.html
+++ b/index.html
@@ -59,22 +59,36 @@
 	<footer class="Row">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-3 footer-leftcol">
-					<p><br>Hosted on <a href="https://pages.github.com/">GitHub Pages</a><br>
-					&#169; 2014 <a href="http://www.kaykanloo.com">Kaykanloo</a>
-					</p>
+				<div class="col-xs-3 footer-leftcol">
+					<div id="BigScreen">
+						<p>Hosted on <a href="https://pages.github.com/">GitHub Pages</a></p>
+						<p>&#169;2014 <a href="http://www.kaykanloo.com">Kaykanloo</a></p>
+					</div>
+					<div id="SmallScreen">
+						<p>&#169;2014 <br> <a href="http://www.kaykanloo.com">Kaykanloo</a></p>
+					</div>
+				
 				</div>
-				<div class="col-md-6 footer-midcol">
-				<ul>
-					<li><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a></li>
-					<li>Except where otherwise noted, content on this website is licensed under a </li>
-					<li><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.</li>
-				</ul>
-				<div class="clearfix"></div>
+				<div class="col-xs-6 footer-midcol">
+					<div id="BigScreen">
+						<p><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a></p>
+						<p>Content is available under <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA 4.0</a> unless otherwise noted.</p>
+						<div class="clearfix"></div>
+					</div>
+					<div id="SmallScreen">
+						<p><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a></p>
+						<p><a rel="license" href="#terms">Terms of use</p>
+					</div>
 				</div>
-				<div class="col-md-3 footer-rightcol">
-					<p>Designed by <img src="img/yebo-icon.png" alt="Yebo Logo"></p>
-					<p class="nopadding">Developed by <a href="http://www.peterfinlan.com/">Peter Finlan</a></p>
+				<div class="col-xs-3 footer-rightcol">
+					<div id="BigScreen">
+						<p>Designed by <img src="img/yebo-icon.png" alt="Yebo Logo"></p>
+						<p class="nopadding">Developed by <a href="http://www.peterfinlan.com/">Peter Finlan</a></p>
+					</div>
+					<div id="SmallScreen">
+						<p>DesignedBy</p>
+						<p><img src="img/yebo-icon.png" alt="Yebo Logo"></p>
+					</div>
 				</div>
 			</div>
 		</div>
