Cleaned Div Content The files cleaned up. New theme coded. Custom main container.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
+<html>
+<head>
+	<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="M. Kaykanloo's Personal Website">
@@ -17,10 +16,9 @@
 	<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
 	<![endif]-->
 	<link href="css/styles.css?v=1.2" rel="stylesheet">	
-  </head>
-
-  <body class="Frame">
-    <header class="Row">
+</head>
+<body>
+	<header>
 	<!-- Fixed navbar -->
     <div class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div class="container">
@@ -31,7 +29,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand currentpage">About Me</a>
+          <a class="navbar-brand">About Me</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
@@ -46,17 +44,14 @@
     </div>
    </header>
    
-   <section class="Row Expand">
-    <div class="container">
-      <!-- Main component for a primary marketing message or call to action -->
-      <div class="jumbotron">
-        <h1>Welcome!</h1>
-        <p>This site is still under construction, you can contact me at contact@kaykanloo.com.</p>
-      </div>
-    </div> <!-- /container -->
-	</section>
-	
-	<footer class="Row">
+		<div class="MainContent">
+			<div class="SideLine">
+				<h1>Welcome!</h1>
+				<p>I'm still refining the theme of this site. Until uploading the site's content, you can contact me at contact@kaykanloo.com.</p> 
+			</div>
+		</div>
+   
+   <footer class="Row">
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-3 footer-leftcol">
@@ -77,23 +72,22 @@
 					</div>
 					<div id="SmallScreen">
 						<p><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a></p>
-						<p><a rel="license" href="#terms">Terms of use</p>
+						<p><a rel="license" href="terms/">Terms of use</p>
 					</div>
 				</div>
 				<div class="col-xs-3 footer-rightcol">
 					<div id="BigScreen">
-						<p>Designed by <img src="img/yebo-icon.png" alt="Yebo Logo"></p>
-						<p class="nopadding">Developed by <a href="http://www.peterfinlan.com/">Peter Finlan</a></p>
+						<p>Designed by </p>
+						<p><a href="http://www.kaykanloo.com/">M. Kaykanloo</a></p>
 					</div>
 					<div id="SmallScreen">
 						<p>DesignedBy</p>
-						<p><img src="img/yebo-icon.png" alt="Yebo Logo"></p>
+						<p><a href="http://www.kaykanloo.com/">M.Kaykanloo</a></p>
 					</div>
 				</div>
 			</div>
 		</div>
 	</footer>
-    <script src="js/jquery.min.js"></script>
+	<script src="js/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
-  </body>
-</html>
+</body>
