--- a/index.html
+++ b/index.html
@@ -55,32 +55,32 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-3 footer-leftcol">
-					<div id="BigScreen">
+					<div class="BigScreen">
 						<p>Hosted on <a href="https://pages.github.com/">GitHub Pages</a></p>
 						<p>&#169;2014 <a href="http://www.kaykanloo.com">Kaykanloo</a></p>
 					</div>
-					<div id="SmallScreen">
+					<div class="SmallScreen">
 						<p>&#169;2014 <br> <a href="http://www.kaykanloo.com">Kaykanloo</a></p>
 					</div>
 				
 				</div>
 				<div class="col-xs-6 footer-midcol">
-					<div id="BigScreen">
+					<div class="BigScreen">
 						<p><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a></p>
 						<p>Content is available under <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA 4.0</a> unless otherwise noted.</p>
 						<div class="clearfix"></div>
 					</div>
-					<div id="SmallScreen">
+					<div class="SmallScreen">
 						<p><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a></p>
 						<p><a rel="license" href="terms/">Terms of use</p>
 					</div>
 				</div>
 				<div class="col-xs-3 footer-rightcol">
-					<div id="BigScreen">
+					<div class="BigScreen">
 						<p>Designed by </p>
 						<p><a href="http://www.kaykanloo.com/">M. Kaykanloo</a></p>
 					</div>
-					<div id="SmallScreen">
+					<div class="SmallScreen">
 						<p>DesignedBy</p>
 						<p><a href="http://www.kaykanloo.com/">M.Kaykanloo</a></p>
 					</div>
