--- a/projects/index.html
+++ b/projects/index.html
@@ -6,16 +6,16 @@
     <meta name="description" content="M. Kaykanloo's Personal Website">
     <meta name="author" content="M. Kaykanloo">
     <link rel="shortcut icon" href="img/favicon.ico">
-    <title>M. Kaykanloo</title>
+    <title>M. Kaykanloo | Projects</title>
 	<!-- Bootstrap -->
-	<link href="css/bootstrap.min.css" rel="stylesheet">
+	<link href="../css/bootstrap.min.css" rel="stylesheet">
 	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 	<!--[if lt IE 9]>
 	<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
 	<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
 	<![endif]-->
-	<link href="css/styles.css?v=1.2" rel="stylesheet">	
+	<link href="../css/styles.css?v=1.2" rel="stylesheet">	
 </head>
 <body>
 	<header>
@@ -29,15 +29,15 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand">About Me</a>
+          <a class="navbar-brand">My Projects</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="">About Me</a></li>
-			<li><a href="resume/">My Resume</a></li>
-			<li><a href="projects/" >My Projects</a></li>
-			<li><a href="knowledge/">Knowledge Base</a></li>
-			<li><a href="contact/">Contact</a></li>
+            <li><a href="../">About Me</a></li>
+			<li><a href="../resume/">My Resume</a></li>
+			<li class="active"><a href="../projects/" >My Projects</a></li>
+			<li><a href="../knowledge/">Knowledge Base</a></li>
+			<li><a href="../contact/">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -45,9 +45,9 @@
    </header>
    
 		<div class="MainContent">
-			<img src="img/Avatar.png" alt="Avatar Image" height="120" width="120">
+			<h1>My Projects</h1>
 			<div class="SideLine">
-				<p>I'm still refining the theme of this site. Until uploading the site's content, you can contact me at contact@kaykanloo.com.</p> 
+				<p>I'll upload my projects as soon as possible.</p> 
 			</div>
 		</div>
    
@@ -72,7 +72,7 @@
 					</div>
 					<div class="SmallScreen">
 						<p><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a></p>
-						<p><a rel="license" href="terms/">Terms of use</p>
+						<p><a rel="license" href="../terms/">Terms of use</p>
 					</div>
 				</div>
 				<div class="col-xs-3 footer-rightcol">
@@ -88,6 +88,6 @@
 			</div>
 		</div>
 	</footer>
-	<script src="js/jquery.min.js"></script>
-	<script src="js/bootstrap.min.js"></script>
+	<script src="../js/jquery.min.js"></script>
+	<script src="../js/bootstrap.min.js"></script>
 </body>
