--- a/resume/index.html
+++ b/resume/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8">
@@ -72,7 +73,7 @@
 					</div>
 					<div class="SmallScreen">
 						<p><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a></p>
-						<p><a rel="license" href="../terms/">Terms of use</p>
+						<p><a rel="license" href="../terms/">Terms of use</a></p>
 					</div>
 				</div>
 				<div class="col-xs-3 footer-rightcol">
