Complete Dual Language Support
URL structure has been decided. Farsi pages without content added.
Language bar implemented.

--- a/fa/terms/index.html
+++ b/fa/terms/index.html
@@ -6,17 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="M. Kaykanloo's Personal Website">
     <meta name="author" content="M. Kaykanloo">
-    <link rel="shortcut icon" href="../img/favicon.ico">
-    <title>M. Kaykanloo | Resume</title>
+    <link rel="shortcut icon" href="../../img/favicon.ico">
+    <title>M. Kaykanloo | Terms of use</title>
 	<!-- Bootstrap -->
-	<link href="../css/bootstrap.min.css" rel="stylesheet">
+	<link href="../../css/bootstrap.min.css" rel="stylesheet">
 	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 	<!--[if lt IE 9]>
 	<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
 	<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
 	<![endif]-->
-	<link href="../css/styles.css?v=1.2" rel="stylesheet">	
+	<link href="../../css/styles.css?v=1.2" rel="stylesheet">	
 </head>
 <body>
 	<header>
@@ -30,14 +30,14 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand">My Resume</a>
+          <a class="navbar-brand">Terms of use</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li><a href="../">About Me</a></li>
-			<li class="active"><a href="../resume/">My Resume</a></li>
+			<li><a href="../resume/">My Resume</a></li>
 			<li><a href="../projects/" >My Projects</a></li>
-			<li><a href="../knowledge/">Knowledge Base</a></li>
+			<li><a href="../../knowledge/">Knowledge Base</a></li>
 			<li><a href="../contact/">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -46,17 +46,17 @@
    </header>
    
 	<div class="MainContent">
-		<div class="ContentLangBar">
-			<a href="../fa/resume/" class="LangButton">فارسی</a>
+		<div class="ContentLangBarFa">
+			<a href="../../terms/" class="LangButton">English</a>
 		</div>
-		<div class="ContentHeader">
-			<h1>My Resume</h1>
+		<div class="ContentHeaderFa">
+			<h1>شروط استفاده</h1>
 		</div>
-		<div class="ContentText">
-			<p>I'll upload my resume as soon as possible.</p>
+		<div class="ContentTextFa">
+			<p>در اولین فرصت شروط استفاده از سایت را بارگذاری خواهم کرد.</p> 
 		</div>
 	</div>
- 
+	
    <footer>
 		<div class="container">
 			<div class="row">
@@ -94,6 +94,6 @@
 			</div>
 		</div>
 	</footer>
-	<script src="../js/jquery.min.js"></script>
-	<script src="../js/bootstrap.min.js"></script>
+	<script src="../../js/jquery.min.js"></script>
+	<script src="../../js/bootstrap.min.js"></script>
 </body>
