--- a/index.html
+++ b/index.html
@@ -44,15 +44,20 @@
       </div>
     </div>
    </header>
-   
-		<div class="MainContent">
-			<img src="img/Avatar.png" alt="Avatar Image" height="120" width="120">
-			<div class="SideLine">
-				<p>I'm still refining the theme of this site. Until uploading the site's content, you can contact me at contact@kaykanloo.com.</p> 
-			</div>
+
+	<div class="MainContent">
+		<div class="ContentLangBar">
+			<a href="fa/" class="LangButton">فارسی</a>
 		</div>
+		<div class="ContentHeader">
+			<img src="img/Avatar.png" alt="Avatar Image" height="120" width="120">
+		</div>
+		<div class="ContentText">
+			<p>I'm still refining the theme of this site. Until uploading the site's content, you can contact me at contact@kaykanloo.com.</p> 
+		</div>
+	</div>
    
-   <footer class="Row">
+   <footer>
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-3 footer-leftcol">
