--- a/fa/index.html
+++ b/fa/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="M. Kaykanloo's Personal Website">
     <meta name="author" content="M. Kaykanloo">
     <link rel="shortcut icon" href="../img/favicon.ico">
-    <title>M. Kaykanloo | Resume</title>
+    <title>M. Kaykanloo</title>
 	<!-- Bootstrap -->
 	<link href="../css/bootstrap.min.css" rel="stylesheet">
 	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -30,33 +30,33 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand">My Resume</a>
+          <a class="navbar-brand">About Me</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li><a href="../">About Me</a></li>
-			<li class="active"><a href="../resume/">My Resume</a></li>
-			<li><a href="../projects/" >My Projects</a></li>
+            <li class="active"><a href="">About Me</a></li>
+			<li><a href="resume/">My Resume</a></li>
+			<li><a href="projects/" >My Projects</a></li>
 			<li><a href="../knowledge/">Knowledge Base</a></li>
-			<li><a href="../contact/">Contact</a></li>
+			<li><a href="contact/">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
     </div>
    </header>
-   
+
 	<div class="MainContent">
-		<div class="ContentLangBar">
-			<a href="../fa/resume/" class="LangButton">فارسی</a>
+		<div class="ContentLangBarFa">
+			<a href="../" class="LangButton">English</a>
 		</div>
-		<div class="ContentHeader">
-			<h1>My Resume</h1>
+		<div class="ContentHeaderFa">
+			<img src="../img/Avatar.png" alt="Avatar Image" height="120" width="120">
 		</div>
-		<div class="ContentText">
-			<p>I'll upload my resume as soon as possible.</p>
+		<div class="ContentTextFa">
+			<p>هنوز در حال بهبود ظاهر سایت هستم. تا زمان بارگذاری محتوا می توانید توسط contact@kaykanloo.com با من در تماس باشید.</p> 
 		</div>
 	</div>
- 
+   
    <footer>
 		<div class="container">
 			<div class="row">
@@ -78,7 +78,7 @@
 					</div>
 					<div class="SmallScreen">
 						<p><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a></p>
-						<p><a rel="license" href="../terms/">Terms of use</a></p>
+						<p><a rel="license" href="terms/">Terms of use</a></p>
 					</div>
 				</div>
 				<div class="col-xs-3 footer-rightcol">
