--- a/fa/resume/index.html
+++ b/fa/resume/index.html
@@ -6,17 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="M. Kaykanloo's Personal Website">
     <meta name="author" content="M. Kaykanloo">
-    <link rel="shortcut icon" href="../img/favicon.ico">
+    <link rel="shortcut icon" href="../../img/favicon.ico">
     <title>M. Kaykanloo | Resume</title>
 	<!-- Bootstrap -->
-	<link href="../css/bootstrap.min.css" rel="stylesheet">
+	<link href="../../css/bootstrap.min.css" rel="stylesheet">
 	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 	<!--[if lt IE 9]>
 	<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
 	<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
 	<![endif]-->
-	<link href="../css/styles.css?v=1.2" rel="stylesheet">	
+	<link href="../
+	../css/styles.css?v=1.2" rel="stylesheet">	
 </head>
 <body>
 	<header>
@@ -37,7 +38,7 @@
             <li><a href="../">About Me</a></li>
 			<li class="active"><a href="../resume/">My Resume</a></li>
 			<li><a href="../projects/" >My Projects</a></li>
-			<li><a href="../knowledge/">Knowledge Base</a></li>
+			<li><a href="../../knowledge/">Knowledge Base</a></li>
 			<li><a href="../contact/">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -46,14 +47,14 @@
    </header>
    
 	<div class="MainContent">
-		<div class="ContentLangBar">
-			<a href="../fa/resume/" class="LangButton">فارسی</a>
+		<div class="ContentLangBarFa">
+			<a href="../../resume/" class="LangButton">English</a>
 		</div>
-		<div class="ContentHeader">
-			<h1>My Resume</h1>
+		<div class="ContentHeaderFa">
+			<h1>رزومه من</h1>
 		</div>
-		<div class="ContentText">
-			<p>I'll upload my resume as soon as possible.</p>
+		<div class="ContentTextFa">
+			<p>در اولین فرصت رزومه خود را بارگذاری خواهم کرد.</p>
 		</div>
 	</div>
  
@@ -94,6 +95,6 @@
 			</div>
 		</div>
 	</footer>
-	<script src="../js/jquery.min.js"></script>
-	<script src="../js/bootstrap.min.js"></script>
+	<script src="../../js/jquery.min.js"></script>
+	<script src="../../js/bootstrap.min.js"></script>
 </body>
