--- a/knowledge/index.html
+++ b/knowledge/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="M. Kaykanloo's Personal Website">
     <meta name="author" content="M. Kaykanloo">
-    <link rel="shortcut icon" href="img/favicon.ico">
+    <link rel="shortcut icon" href="../img/favicon.ico">
     <title>M. Kaykanloo | Knowledge Base</title>
 	<!-- Bootstrap -->
 	<link href="../css/bootstrap.min.css" rel="stylesheet">
@@ -45,14 +45,16 @@
     </div>
    </header>
    
-		<div class="MainContent">
+	<div class="MainContent">
+		<div class="ContentHeader">
 			<h1>Knowledge Base</h1>
-			<div class="SideLine">
-				<p>I'll upload the knowledge base as soon as possible.</p> 
-			</div>
 		</div>
+		<div class="ContentText">
+			<p>I'll upload the knowledge base as soon as possible.</p> 
+		</div>
+	</div>
    
-   <footer class="Row">
+   <footer>
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-3 footer-leftcol">
