--- a/projects/index.html
+++ b/projects/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="M. Kaykanloo's Personal Website">
     <meta name="author" content="M. Kaykanloo">
-    <link rel="shortcut icon" href="img/favicon.ico">
+    <link rel="shortcut icon" href="../img/favicon.ico">
     <title>M. Kaykanloo | Projects</title>
 	<!-- Bootstrap -->
 	<link href="../css/bootstrap.min.css" rel="stylesheet">
@@ -45,14 +45,19 @@
     </div>
    </header>
    
-		<div class="MainContent">
-			<h1>My Projects</h1>
-			<div class="SideLine">
-				<p>I'll upload my projects as soon as possible.</p> 
-			</div>
+	<div class="MainContent">
+		<div class="ContentLangBar">
+			<a href="../fa/projects/" class="LangButton">فارسی</a>
 		</div>
-   
-   <footer class="Row">
+		<div class="ContentHeader">
+			<h1>My Projects</h1>
+		</div>
+		<div class="ContentText">
+			<p>I'll upload my projects as soon as possible.</p>  
+		</div>
+	</div>
+ 
+   <footer>
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-3 footer-leftcol">
