--- a/fa/resume/index.html
+++ b/fa/resume/index.html
@@ -97,4 +97,5 @@
 	</footer>
 	<script src="../../js/jquery.min.js"></script>
 	<script src="../../js/bootstrap.min.js"></script>
+	<script src="../../js/googleanalytics.js"></script>
 </body>
