--- a/knowledge/index.html
+++ b/knowledge/index.html
@@ -93,4 +93,5 @@
 	</footer>
 	<script src="../js/jquery.min.js"></script>
 	<script src="../js/bootstrap.min.js"></script>
+	<script src="../js/googleanalytics.js"></script>
 </body>
