--- a/resume/index.html
+++ b/resume/index.html
@@ -96,4 +96,5 @@
 	</footer>
 	<script src="../js/jquery.min.js"></script>
 	<script src="../js/bootstrap.min.js"></script>
+	<script src="../js/googleanalytics.js"></script>
 </body>
