--- a/knowledge/samplecontent/index.html
+++ b/knowledge/samplecontent/index.html
@@ -6,17 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="M. Kaykanloo's Personal Website">
     <meta name="author" content="M. Kaykanloo">
-    <link rel="shortcut icon" href="../img/favicon.ico">
-    <title>M. Kaykanloo | Knowledge Base</title>
+    <link rel="shortcut icon" href="../../img/favicon.ico">
+    <title>M. Kaykanloo | Sample Content</title>
 	<!-- Bootstrap -->
-	<link href="../css/bootstrap.min.css" rel="stylesheet">
+	<link href="../../css/bootstrap.min.css" rel="stylesheet">
 	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 	<!--[if lt IE 9]>
 	<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
 	<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
 	<![endif]-->
-	<link href="../css/styles.css?v=1.2" rel="stylesheet">	
+	<link href="../../css/styles.css?v=1.2" rel="stylesheet">	
 </head>
 <body>
 	<header>
@@ -30,14 +30,14 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand">Knowledge Base</a>
+          <a class="navbar-brand">Sample Content</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li><a href="../">About Me</a></li>
 			<li><a href="../resume/">My Resume</a></li>
 			<li><a href="../projects/" >My Projects</a></li>
-			<li class="active"><a href="../knowledge/">Knowledge Base</a></li>
+			<li><a href="../knowledge/">Knowledge Base</a></li>
 			<li><a href="../contact/">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -46,82 +46,19 @@
    </header>
    
 	<div class="MainContent">
+		<ol class="breadcrumb">
+			<li><a href="../">Knowledge Base</a></li>
+			<li>Group II</li>
+			<li>SubGroup I</li>
+		</ol>
 		<div class="ContentHeader">
-			<h2>Knowledge Base Contents</h2>
+			<h1>Sample Content</h1>
 		</div>
-		<div class="panel-group" id="accordion">
-			<div class="panel panel-default">
-				<div class="panel-heading">
-					<h4 class="panel-title">
-						<a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
-							Group I
-						</a>
-					</h4>
-				</div>
-				<div id="collapseOne" class="panel-collapse collapse">
-					<div class="panel-body">
-						Description.
-						<ul class="list-group">
-							<li class="list-group-item"><a href="samplecontent">Article 1</a></li>
-							<li class="list-group-item"><a href="samplecontent">Article 2</a></li>
-							<li class="list-group-item"><a href="samplecontent">Article 3</a></li>
-						</ul>
-					</div>
-				</div>
-			</div>
-			<div class="panel panel-default">
-				<div class="panel-heading">
-					<h4 class="panel-title">
-						<a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
-							Group II
-						</a>
-					</h4>
-				</div>
-				<div id="collapseTwo" class="panel-collapse collapse">
-					<div class="panel-body">
-						<div class="panel-group">
-							<div class="panel panel-default">
-								<div class="panel-heading">
-									<h4 class="panel-title">
-										<a data-toggle="collapse" data-parent="#collapseTwo" href="#collapseTwoOne">
-											SubGroup I
-										</a>
-									</h4>
-								</div>
-								<div id="collapseTwoOne" class="panel-collapse collapse">
-									<div class="panel-body">
-										Description.
-										<ul class="list-group">
-											<li class="list-group-item"><a href="samplecontent">Article 4</a></li>
-											<li class="list-group-item"><a href="samplecontent">Article 5 has a long title for testing purposes</a></li>
-										</ul>
-									</div>
-								</div>
-							</div>
-							<div class="panel panel-default">
-								<div class="panel-heading">
-									<h4 class="panel-title">
-										<a data-toggle="collapse" data-parent="#collapseTwo" href="#collapseTwoTwo">
-											SubGroup II
-										</a>
-									</h4>
-								</div>
-								<div id="collapseTwoTwo" class="panel-collapse collapse">
-									<div class="panel-body">
-										Description.
-										<ul class="list-group">
-											<li class="list-group-item"><a href="samplecontent">Article 6</a></li>
-										</ul>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div> <!-- /accordion -->
-	</div> <!-- /maincontent -->
-   
+		<div class="ContentText">
+			<p>This is a sample content of knowledge base.</p> 
+		</div>
+	</div>
+	
    <footer>
 		<div class="container">
 			<div class="row">
@@ -143,7 +80,7 @@
 					</div>
 					<div class="SmallScreen">
 						<p><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a></p>
-						<p><a rel="license" href="../terms/">Terms of use</a></p>
+						<p><a rel="license" href="../../terms/">Terms of use</a></p>
 					</div>
 				</div>
 				<div class="col-xs-3 footer-rightcol">
@@ -159,7 +96,7 @@
 			</div>
 		</div>
 	</footer>
-	<script src="../js/jquery.min.js"></script>
-	<script src="../js/bootstrap.min.js"></script>
-	<script src="../js/googleanalytics.js"></script>
+	<script src="../../js/jquery.min.js"></script>
+	<script src="../../js/bootstrap.min.js"></script>
+	<script src="../../js/googleanalytics.js"></script>
 </body>
