--- a/404.html
+++ b/404.html
@@ -6,17 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="M. Kaykanloo's Personal Website">
     <meta name="author" content="M. Kaykanloo">
-    <link rel="shortcut icon" href="img/favicon.ico">
+    <link rel="shortcut icon" href="http://www.kaykanloo.com/img/favicon.ico">
     <title>M. Kaykanloo | Page not found</title>
 	<!-- Bootstrap -->
-	<link href="css/bootstrap.min.css" rel="stylesheet">
+	<link href="http://www.kaykanloo.com/css/bootstrap.min.css" rel="stylesheet">
 	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 	<!--[if lt IE 9]>
 	<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
 	<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
 	<![endif]-->
-	<link href="css/styles.css?v=1.2" rel="stylesheet">	
+	<link href="http://www.kaykanloo.com/css/styles.css?v=1.2" rel="stylesheet">	
 </head>
 <body>
 	<header>
@@ -34,11 +34,11 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li><a href="">About Me</a></li>
-			<li><a href="resume/">My Resume</a></li>
-			<li><a href="projects/" >My Projects</a></li>
-			<li><a href="knowledge/">Knowledge Base</a></li>
-			<li><a href="contact/">Contact</a></li>
+            <li><a href="http://www.kaykanloo.com/">About Me</a></li>
+			<li><a href="http://www.kaykanloo.com/resume/">My Resume</a></li>
+			<li><a href="http://www.kaykanloo.com/projects/" >My Projects</a></li>
+			<li><a href="http://www.kaykanloo.com/knowledge/">Knowledge Base</a></li>
+			<li><a href="http://www.kaykanloo.com/contact/">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -50,7 +50,7 @@
 			<h1>Page not found!</h1>
 		</div>
 		<div class="ContentText">
-			<p>The address that you've entered does not exists. Check it again or visit the <a href="./">Home Page</a></p> 
+			<p>The address that you've entered does not exists. Check it again or visit the <a href="http://www.kaykanloo.com/">Home Page</a></p> 
 		</div>
 	</div>
    
@@ -75,7 +75,7 @@
 					</div>
 					<div class="SmallScreen">
 						<p><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a></p>
-						<p><a rel="license" href="terms/">Terms of use</a></p>
+						<p><a rel="license" href="http://www.kaykanloo.com/terms/">Terms of use</a></p>
 					</div>
 				</div>
 				<div class="col-xs-3 footer-rightcol">
@@ -91,7 +91,7 @@
 			</div>
 		</div>
 	</footer>
-	<script src="js/jquery.min.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script src="js/googleanalytics.js"></script>
+	<script src="http://www.kaykanloo.com/js/jquery.min.js"></script>
+	<script src="http://www.kaykanloo.com/js/bootstrap.min.js"></script>
+	<script src="http://www.kaykanloo.com/js/googleanalytics.js"></script>
 </body>
