Bigfix: Having Polite 404 page
Adding a please!

--- a/404.html
+++ b/404.html
@@ -50,7 +50,7 @@
 			<h1>Page not found!</h1>
 		</div>
 		<div class="ContentText">
-			<p>The address that you've entered does not exists. Check it again or visit the <a href="http://www.kaykanloo.com/">Home Page</a></p> 
+			<p>The address that you've entered does not exists. Please check it again or visit the <a href="http://www.kaykanloo.com/">Home Page</a></p> 
 		</div>
 	</div>
    
