--- a/knowledge/samplecontent/index.html
+++ b/knowledge/samplecontent/index.html
@@ -34,11 +34,11 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li><a href="../">About Me</a></li>
-			<li><a href="../resume/">My Resume</a></li>
-			<li><a href="../projects/" >My Projects</a></li>
-			<li><a href="../knowledge/">Knowledge Base</a></li>
-			<li><a href="../contact/">Contact</a></li>
+            <li><a href="../../">About Me</a></li>
+			<li><a href="../../resume/">My Resume</a></li>
+			<li><a href="../../projects/" >My Projects</a></li>
+			<li><a href="../../knowledge/">Knowledge Base</a></li>
+			<li><a href="../../contact/">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
