About page content
About page content uploaded and content text justify style added.

--- a/fa/index.html
+++ b/fa/index.html
@@ -50,10 +50,11 @@
 			<a href="../" class="LangButton">English</a>
 		</div>
 		<div class="ContentHeaderFa">
-			<img src="../img/Avatar.png" alt="Avatar Image" height="120" width="120">
+			<h1>صفحه شخصی یک توسعه دهنده راهکارهای نرم افزاری هوشمند</h1>
 		</div>
 		<div class="ContentTextFa">
-			<p>هنوز در حال بهبود ظاهر سایت هستم. تا زمان بارگذاری محتوا می توانید توسط contact@kaykanloo.com با من در تماس باشید.</p> 
+			<p>به عنوان یک علاقه مند به علوم کامپیوتر، از برنامه نویسی و توسعه نرم افزار لذت می برم و زمینه بنیادی فعالیت هام در محدوده هوش مصنوعی قرار می گیره. نرم افزار در نظرم وسیله ای برای ایجاد یک تجربه ست که به شکلی هماهنگ با زندگی روزمره یکپارچه میشه و به بهبود کیفیت اون کمک میکنه. به همین دلیل به راهکار های نرم افزاری هوشمندی که به روش های مختلف در زندگی ما به ایفای نقش می پردازند و به وسیله دستگاه های متنوعی از سرویس دهنده های مبتنی بر اینترنت گرفته تا تلفن های همراه و ابزارهای تعبیه شده در دسترسمون قرار می گیرن علاقه دارم.</p>
+			<p>علاوه بر این جنبه عملی که نتیجه فعالیت های اون رو در صفحه پروژه ها می تونید ببینید، علاقه زیادی هم به مباحث نظری دارم که موجب شده از اینجا به عنوان محلی برای سامان دهی و مدیریت دانسته هایم نیز استفاده کنم و صفحه پایگاه دانش رو برای ثبت همین دانسته ها و البته به اشتراک گذاشتن ایده های خودم ایجاد کنم.</p> 
 		</div>
 	</div>
    
