--- a/index.html
+++ b/index.html
@@ -50,10 +50,12 @@
 			<a href="fa/" class="LangButton">فارسی</a>
 		</div>
 		<div class="ContentHeader">
-			<img src="img/Avatar.png" alt="Avatar Image" height="120" width="120">
+			<h1>The Personal Webpage Of An</h1>
+			<h1>Intelligent Software Solutions Developer</h1>
 		</div>
 		<div class="ContentText">
-			<p>I'm still refining the theme of this site. Until uploading the site's content, you can contact me at contact@kaykanloo.com.</p> 
+			<p>As a computer science enthusiastic, I enjoy programming and software development and my main activity domain is artificial intelligence. Software, in my view, is a mean to create an experience which integrates in concinnity with everyday life and improves it. So, I'm interested in intelligent software solutions which play roles in our life in variety of ways and through different devices ranging from servers to smartphones and embedded systems.</p>
+			<p>In addition to this practical aspect which you can see its outcome in the projects page, I've also a considerable interest in the theoretical concepts which resulted in using this site as a place to organize and manage my knowledge in this field. The knowledge base page is the place to store these contents and also sharing my own ideas.</p> 
 		</div>
 	</div>
    
