--- a/fa/index.html
+++ b/fa/index.html
@@ -50,7 +50,8 @@
 			<a href="../" class="LangButton">English</a>
 		</div>
 		<div class="ContentHeaderFa">
-			<h1>صفحه شخصی یک توسعه دهنده راهکارهای نرم افزاری هوشمند</h1>
+			<h1>صفحه شخصی یک</h1>
+			<h1>توسعه دهنده راهکارهای نرم افزاری هوشمند</h1>
 		</div>
 		<div class="ContentTextFa">
 			<p>به عنوان یک علاقه مند به علوم کامپیوتر، از برنامه نویسی و توسعه نرم افزار لذت می برم و زمینه بنیادی فعالیت هام در محدوده هوش مصنوعی قرار می گیره. نرم افزار در نظرم وسیله ای برای ایجاد یک تجربه ست که به شکلی هماهنگ با زندگی روزمره یکپارچه میشه و به بهبود کیفیت اون کمک میکنه. به همین دلیل به راهکار های نرم افزاری هوشمندی که به روش های مختلف در زندگی ما به ایفای نقش می پردازند و به وسیله دستگاه های متنوعی از سرویس دهنده های مبتنی بر اینترنت گرفته تا تلفن های همراه و ابزارهای تعبیه شده در دسترسمون قرار می گیرن علاقه دارم.</p>
