--- a/contact/index.html
+++ b/contact/index.html
@@ -52,8 +52,10 @@
 		<div class="ContentHeader">
 			<h1>Contact</h1>
 		</div>
-		<div class="ContentText">
-			<p>I'll upload the contact info as soon as possible.</p> 
+		<div class="ContentTextCenter">
+			<br/>
+			<p>You can contact me at</p>
+			<p>CONTACT at KAYKANLOO dot COM</p> 
 		</div>
 	</div>
    
