--- a/fa/contact/index.html
+++ b/fa/contact/index.html
@@ -52,8 +52,9 @@
 		<div class="ContentHeaderFa">
 			<h1>تماس</h1>
 		</div>
-		<div class="ContentTextFa">
-			<p>اطلاعات تماس را در اولین فرصت بارگذاری خواهم کرد.</p> 
+		<div class="ContentTextCenterFa">
+			<p>می تونید با این آدرس با من تماس بگیرید</p>
+			<p>CONTACT at KAYKANLOO dot COM</p>
 		</div>
 	</div>
 	   
