Projects and resume correctness
using a better notice and center style

--- a/fa/projects/index.html
+++ b/fa/projects/index.html
@@ -52,8 +52,8 @@
 		<div class="ContentHeaderFa">
 			<h1>پروژه‌های من</h1>
 		</div>
-		<div class="ContentTextFa">
-			<p>در اولین فرصت پروژه‌هایم را بارگذاری خواهم کرد.</p>  
+		<div class="ContentTextCenterFa">
+			<p>فعلا هیچ پروژه عمومی برای نمایش وجود ندارد!</p>  
 		</div>
 	</div>
  
