--- a/fa/resume/index.html
+++ b/fa/resume/index.html
@@ -53,8 +53,8 @@
 		<div class="ContentHeaderFa">
 			<h1>رزومه من</h1>
 		</div>
-		<div class="ContentTextFa">
-			<p>در اولین فرصت رزومه خود را بارگذاری خواهم کرد.</p>
+		<div class="ContentTextCenterFa">
+			<p>در اولین فرصت رزومه خود را بارگذاری خواهم کرد!</p>
 		</div>
 	</div>
  
