--- a/projects/index.html
+++ b/projects/index.html
@@ -52,8 +52,8 @@
 		<div class="ContentHeader">
 			<h1>My Projects</h1>
 		</div>
-		<div class="ContentText">
-			<p>I'll upload my projects as soon as possible.</p>  
+		<div class="ContentTextCenter">
+			<p>No public projects yet!</p>  
 		</div>
 	</div>
  
