--- a/resume/index.html
+++ b/resume/index.html
@@ -52,8 +52,8 @@
 		<div class="ContentHeader">
 			<h1>My Resume</h1>
 		</div>
-		<div class="ContentText">
-			<p>I'll upload my resume as soon as possible.</p>
+		<div class="ContentTextCenter">
+			<p>I'll upload my resume as soon as possible!</p>
 		</div>
 	</div>
  
