Knowledge Base Contents
Group titles uploaded.

--- a/knowledge/index.html
+++ b/knowledge/index.html
@@ -53,69 +53,238 @@
 			<div class="panel panel-default">
 				<div class="panel-heading">
 					<h4 class="panel-title">
-						<a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
-							Group I
+						<a data-toggle="collapse" data-parent="#accordion" href="#ideas">
+							My ideas
 						</a>
 					</h4>
 				</div>
-				<div id="collapseOne" class="panel-collapse collapse">
+				<div id="ideas" class="panel-collapse collapse">
 					<div class="panel-body">
-						Description.
-						<ul class="list-group">
-							<li class="list-group-item"><a href="samplecontent">Article 1</a></li>
-							<li class="list-group-item"><a href="samplecontent">Article 2</a></li>
-							<li class="list-group-item"><a href="samplecontent">Article 3</a></li>
-						</ul>
+						<p>Nothing yet!</p>
+						<!--ul class="list-group">
+							<li class="list-group-item"><a href="samplecontent">Sample content</a></li>
+						</ul-->
 					</div>
 				</div>
 			</div>
 			<div class="panel panel-default">
 				<div class="panel-heading">
 					<h4 class="panel-title">
-						<a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
-							Group II
+						<a data-toggle="collapse" data-parent="#accordion" href="#softeng">
+							Software creation and management
 						</a>
 					</h4>
 				</div>
-				<div id="collapseTwo" class="panel-collapse collapse">
+				<div id="softeng" class="panel-collapse collapse">
 					<div class="panel-body">
-						<div class="panel-group">
-							<div class="panel panel-default">
-								<div class="panel-heading">
-									<h4 class="panel-title">
-										<a data-toggle="collapse" data-parent="#collapseTwo" href="#collapseTwoOne">
-											SubGroup I
-										</a>
-									</h4>
-								</div>
-								<div id="collapseTwoOne" class="panel-collapse collapse">
-									<div class="panel-body">
-										Description.
-										<ul class="list-group">
-											<li class="list-group-item"><a href="samplecontent">Article 4</a></li>
-											<li class="list-group-item"><a href="samplecontent">Article 5 has a long title for testing purposes</a></li>
-										</ul>
-									</div>
-								</div>
-							</div>
-							<div class="panel panel-default">
-								<div class="panel-heading">
-									<h4 class="panel-title">
-										<a data-toggle="collapse" data-parent="#collapseTwo" href="#collapseTwoTwo">
-											SubGroup II
-										</a>
-									</h4>
-								</div>
-								<div id="collapseTwoTwo" class="panel-collapse collapse">
-									<div class="panel-body">
-										Description.
-										<ul class="list-group">
-											<li class="list-group-item"><a href="samplecontent">Article 6</a></li>
-										</ul>
-									</div>
-								</div>
-							</div>
-						</div>
+						<p>Nothing yet!</p>
+						<!--ul class="list-group">
+							<li class="list-group-item"><a href="samplecontent">Sample content</a></li>
+						</ul-->
+					</div>
+				</div>
+			</div>
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<h4 class="panel-title">
+						<a data-toggle="collapse" data-parent="#accordion" href="#programming">
+							Programming
+						</a>
+					</h4>
+				</div>
+				<div id="programming" class="panel-collapse collapse">
+					<div class="panel-body">
+						<p>Nothing yet!</p>
+						<!--ul class="list-group">
+							<li class="list-group-item"><a href="samplecontent">Sample content</a></li>
+						</ul-->
+					</div>
+				</div>
+			</div>
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<h4 class="panel-title">
+						<a data-toggle="collapse" data-parent="#accordion" href="#algorithms">
+							Algorithms and theoretical computer science
+						</a>
+					</h4>
+				</div>
+				<div id="algorithms" class="panel-collapse collapse">
+					<div class="panel-body">
+						<p>Nothing yet!</p>
+						<!--ul class="list-group">
+							<li class="list-group-item"><a href="samplecontent">Sample content</a></li>
+						</ul-->
+					</div>
+				</div>
+			</div>
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<h4 class="panel-title">
+						<a data-toggle="collapse" data-parent="#accordion" href="#ai">
+							Artificial intelligence
+						</a>
+					</h4>
+				</div>
+				<div id="ai" class="panel-collapse collapse">
+					<div class="panel-body">
+						<p>Nothing yet!</p>
+						<!--ul class="list-group">
+							<li class="list-group-item"><a href="samplecontent">Sample content</a></li>
+						</ul-->
+					</div>
+				</div>
+			</div>
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<h4 class="panel-title">
+						<a data-toggle="collapse" data-parent="#accordion" href="#math">
+							Mathematical foundation
+						</a>
+					</h4>
+				</div>
+				<div id="math" class="panel-collapse collapse">
+					<div class="panel-body">
+						<p>Nothing yet!</p>
+						<!--ul class="list-group">
+							<li class="list-group-item"><a href="samplecontent">Sample content</a></li>
+						</ul-->
+					</div>
+				</div>
+			</div>
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<h4 class="panel-title">
+						<a data-toggle="collapse" data-parent="#accordion" href="#platforms">
+							Software platforms and libraries
+						</a>
+					</h4>
+				</div>
+				<div id="platforms" class="panel-collapse collapse">
+					<div class="panel-body">
+						<p>Nothing yet!</p>
+						<!--ul class="list-group">
+							<li class="list-group-item"><a href="samplecontent">Sample content</a></li>
+						</ul-->
+					</div>
+				</div>
+			</div>
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<h4 class="panel-title">
+						<a data-toggle="collapse" data-parent="#accordion" href="#information">
+							Information management
+						</a>
+					</h4>
+				</div>
+				<div id="information" class="panel-collapse collapse">
+					<div class="panel-body">
+						<p>Nothing yet!</p>
+						<!--ul class="list-group">
+							<li class="list-group-item"><a href="samplecontent">Sample content</a></li>
+						</ul-->
+					</div>
+				</div>
+			</div>
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<h4 class="panel-title">
+						<a data-toggle="collapse" data-parent="#accordion" href="#networking">
+							Communication and security
+						</a>
+					</h4>
+				</div>
+				<div id="networking" class="panel-collapse collapse">
+					<div class="panel-body">
+						<p>Nothing yet!</p>
+						<!--ul class="list-group">
+							<li class="list-group-item"><a href="samplecontent">Sample content</a></li>
+						</ul-->
+					</div>
+				</div>
+			</div>
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<h4 class="panel-title">
+						<a data-toggle="collapse" data-parent="#accordion" href="#graphic">
+							Computer graphics and visualization
+						</a>
+					</h4>
+				</div>
+				<div id="graphic" class="panel-collapse collapse">
+					<div class="panel-body">
+						<p>Nothing yet!</p>
+						<!--ul class="list-group">
+							<li class="list-group-item"><a href="samplecontent">Sample content</a></li>
+						</ul-->
+					</div>
+				</div>
+			</div>
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<h4 class="panel-title">
+						<a data-toggle="collapse" data-parent="#accordion" href="#hci">
+							Human-computer interaction
+						</a>
+					</h4>
+				</div>
+				<div id="hci" class="panel-collapse collapse">
+					<div class="panel-body">
+						<p>Nothing yet!</p>
+						<!--ul class="list-group">
+							<li class="list-group-item"><a href="samplecontent">Sample content</a></li>
+						</ul-->
+					</div>
+				</div>
+			</div>
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<h4 class="panel-title">
+						<a data-toggle="collapse" data-parent="#accordion" href="#cm">
+							Computing methodologies
+						</a>
+					</h4>
+				</div>
+				<div id="cm" class="panel-collapse collapse">
+					<div class="panel-body">
+						<p>Nothing yet!</p>
+						<!--ul class="list-group">
+							<li class="list-group-item"><a href="samplecontent">Sample content</a></li>
+						</ul-->
+					</div>
+				</div>
+			</div>
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<h4 class="panel-title">
+						<a data-toggle="collapse" data-parent="#accordion" href="#hardware">
+							Computer system organization and hardware
+						</a>
+					</h4>
+				</div>
+				<div id="hardware" class="panel-collapse collapse">
+					<div class="panel-body">
+						<p>Nothing yet!</p>
+						<!--ul class="list-group">
+							<li class="list-group-item"><a href="samplecontent">Sample content</a></li>
+						</ul-->
+					</div>
+				</div>
+			</div>
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<h4 class="panel-title">
+						<a data-toggle="collapse" data-parent="#accordion" href="#beyond">
+							Beyond computer science
+						</a>
+					</h4>
+				</div>
+				<div id="beyond" class="panel-collapse collapse">
+					<div class="panel-body">
+						<p>Nothing yet!</p>
+						<!--ul class="list-group">
+							<li class="list-group-item"><a href="samplecontent">Sample content</a></li>
+						</ul-->
 					</div>
 				</div>
 			</div>
