404 and terms content
terms page content uploaded and 404 page content centered.

--- a/404.html
+++ b/404.html
@@ -49,7 +49,7 @@
 		<div class="ContentHeader">
 			<h1>Page not found!</h1>
 		</div>
-		<div class="ContentText">
+		<div class="ContentTextCenter">
 			<p>The address that you've entered does not exists. Please check it again or visit the <a href="http://www.kaykanloo.com/">Home Page</a></p> 
 		</div>
 	</div>
