--- a/fa/terms/index.html
+++ b/fa/terms/index.html
@@ -52,8 +52,10 @@
 		<div class="ContentHeaderFa">
 			<h1>شروط استفاده</h1>
 		</div>
-		<div class="ContentTextFa">
-			<p>در اولین فرصت شروط استفاده از سایت را بارگذاری خواهم کرد.</p> 
+		<div class="ContentTextCenterFa">
+			<p>محتوای این سایت تحت مجوز</p>
+			<p><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Attribution-NonCommercial-ShareAlike 4.0 International</a></p>
+			<p>قرار دارد مگر در جایی که غیر این قید شود.</p>
 		</div>
 	</div>
 	
