--- a/terms/index.html
+++ b/terms/index.html
@@ -52,8 +52,9 @@
 		<div class="ContentHeader">
 			<h1>Terms of use</h1>
 		</div>
-		<div class="ContentText">
-			<p>I'll upload the terms of use as soon as possible.</p> 
+		<div class="ContentTextCenter">
+			<p>Except where otherwise noted, content on this site is licensed under a</p> 
+			<p><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Attribution-NonCommercial-ShareAlike 4.0 International license</a>.</p>
 		</div>
 	</div>
 	
