Bugfix: Terms of use page
Creative commons phrase added.

--- a/terms/index.html
+++ b/terms/index.html
@@ -54,7 +54,7 @@
 		</div>
 		<div class="ContentTextCenter">
 			<p>Except where otherwise noted, content on this site is licensed under a</p> 
-			<p><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Attribution-NonCommercial-ShareAlike 4.0 International license</a>.</p>
+			<p><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International license</a>.</p>
 		</div>
 	</div>
 	
