--- a/fa/terms/index.html
+++ b/fa/terms/index.html
@@ -54,7 +54,7 @@
 		</div>
 		<div class="ContentTextCenterFa">
 			<p>محتوای این سایت تحت مجوز</p>
-			<p><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Attribution-NonCommercial-ShareAlike 4.0 International</a></p>
+			<p><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International</a></p>
 			<p>قرار دارد مگر در جایی که غیر این قید شود.</p>
 		</div>
 	</div>
