KB categories split
Communication and security -->
/ Communication and networks
\ Security and privacy

--- a/knowledge/index.html
+++ b/knowledge/index.html
@@ -189,12 +189,29 @@
 			<div class="panel panel-default">
 				<div class="panel-heading">
 					<h4 class="panel-title">
-						<a data-toggle="collapse" data-parent="#accordion" href="#networking">
-							Communication and security
+						<a data-toggle="collapse" data-parent="#accordion" href="#networks">
+							Communication and networks
 						</a>
 					</h4>
 				</div>
-				<div id="networking" class="panel-collapse collapse">
+				<div id="networks" class="panel-collapse collapse">
+					<div class="panel-body">
+						<p>Nothing yet!</p>
+						<!--ul class="list-group">
+							<li class="list-group-item"><a href="samplecontent">Sample content</a></li>
+						</ul-->
+					</div>
+				</div>
+			</div>
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<h4 class="panel-title">
+						<a data-toggle="collapse" data-parent="#accordion" href="#security">
+							Security and privacy
+						</a>
+					</h4>
+				</div>
+				<div id="security" class="panel-collapse collapse">
 					<div class="panel-body">
 						<p>Nothing yet!</p>
 						<!--ul class="list-group">
